# Conscience-by-Design

./: .gitignore  ACKNOWLEDGMENTS.md  AUTHORS  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST_OF_DONATION.md  MANIFEST_OF_DONATION.txt  README.md  ROADMAP.md  SECURITY.md  citation.html  demo.py  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  nesto
.github/workflows/: tests.yml
Conscience Layer Prototype Embedding Ethical Awareness into Artificial Intelligence/: Explainer.md  Prototype.md
Framework Conscience by Design for ethical aligned technology/: Framework.md
Papers/: 01_Decalaration_of_Creation_by_Aleksandar_Rodic_Conscience_by_Design.md  04_Explainer.md  Moral_Revolution_Framework_v1.0_Rodic.md
conscience layer rapid v2/: conscience_layer_prototype.py
conscience_layer/: __init__.py  adapter.py  core.py  feature_extractor.py
docs/: Declaration_of_Creation_Official.md
github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
license/: LICENSE-CC-BY-4.0.md  LICENSE-MIT.md
papers/: 01-Decalaration-of-Creation-by-Aleksandar-Rodic-Conscience-by-Design.md  03-Prototype-Conscience-Layer-Embedding-Ethical-Awareness-in-ai-by-Aleksandar-Rodic-Conscience-by-Design.md  05-Explanation-of-Conscience-Layer-ethical-ai-by-Aleksandar-Rodic-Conscience-by-Design.md  06-The-Rodic-Principle-Universal-Axiomatic-Model-for-Conscious-by-Aleksandar-Rodic-Conscience-by-Design.md
prototype/: conscience_layer_prototype.py
tests/: test_core.py
