[build-system]
requires=["setuptools>=61"]
build-backend="setuptools.build_meta"
[project]
name="conscience_layer"
version="0.1.0"
description="Conscience Layer — Ethical Awareness Core (TIS/HAI/SRQ proxies + Policy Gate)"
authors=[{name="Aleksandar Rodić"}]
readme="README.md"
requires-python=">=3.9"
license={text="MIT"}
dependencies=["numpy","torch","scipy","scikit-learn"]
