[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "conscience-layer-prototype"
version = "0.1.0"
description = "Prototype implementation of an ethical conscience layer with SRQ neural model, SHAP, and LIME explanations."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.22",
    "scikit-learn>=1.1",
    "torch>=2.0",
    "statsmodels>=0.13",
]


[project.scripts]
conscience-layer = "conscience_layer_prototype:simulate_conscience_layer"
